# CS-SLA-Strategy-Agent

./: .gitignore  README.md  StateGraph_Compile_Explanation.md  agent.md  delivery_center_sla_data.csv  main.py  output.json  pyproject.toml  pyrefly.toml
.cursor/rules/: global.mdc
data/: level1_clean.csv  sample_agents.csv  simple_data.csv  yesterday_calls.csv
docs/: CODE_REVIEW.md  Domain_Guide.md  GOOGLE_SHEETS_SETUP.md  LANGGRAPH_GOOGLE_SHEETS_INTEGRATION.md  LANGGRAPH_GOOGLE_SHEETS_INTEGRATION_REVIEW.md  REVIEW_SUMMARY.md  StateGraph_Compile_Explanation.md  StateGraph_Compile_Review.md  TESTING_GUIDE.md  TEST_FIX_SUMMARY.md
examples/: google_sheets_example.py  google_sheets_langgraph_example.py
src/: agent.py  agent_spike.py  agent_spike_improved.py  call_sla_agent.py  data_loader.py  gen_sample_data.py  gen_simple_data.py  google_sheets_reader.py  gs_reader.py  slack.py
tests/: test_agent_spike.py  test_data_loader.py  test_data_review.py
utils/: env_utils.py  example.env
